--- a/index.html
+++ b/index.html
@@ -14,157 +14,136 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- displays site properly based on user's device -->
-
-        <link
-          rel="icon"
-          type="image/png"
-          sizes="32x32"
-          href="./images/favicon-32x32.png"
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:ital,wght@0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <title>Frontend Mentor | Insure landing page</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <main>
+      <div class="nav">
+        <img src="/images/logo.svg" alt="Logo" class="logo" />
+        <img
+          src="/images/icon-hamburger.svg"
+          alt="hamburger"
+          class="hamburg"
+          onclick="menu()"
         />
-        <!-- Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-          href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:ital,wght@0,700;1,400&display=swap"
-          rel="stylesheet"
-        />
-        <title>Frontend Mentor | Insure landing page</title>
-        <link rel="stylesheet" href="style.css" />
-        <script src="script.js"></script>
-      </head>
-      <body>
-        <main>
-          <div class="nav">
-            <img src="/images/logo.svg" alt="Logo" class="logo" />
-            <img
-              src="/images/icon-hamburger.svg"
-              alt="hamburger"
-              class="hamburg"
-              onclick="menu()"
-            />
-            <ul class="menu">
-              <li><a href="#">How we work</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Account</a></li>
-              <li><a href="#" class="navBtn">View Plans</a></li>
+        <ul class="menu">
+          <li><a href="#">How we work</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Account</a></li>
+          <li><a href="#" class="navBtn">View Plans</a></li>
+        </ul>
+      </div>
+      <div class="firstSection">
+        <div class="firstLeft">
+          <hr />
+          <h1>Humanizing your insurance.</h1>
+          <p>
+            Get your life insurance coverage easier and faster. We blend our
+            expertise and technology to help you find the plan that’s right for
+            you. Ensure you and your loved ones are protected.
+          </p>
+          <button>VIEW PLANS</button>
+        </div>
+        <div class="firstRight">
+          <img src="/images/image-intro-desktop.jpg" alt="" />
+        </div>
+      </div>
+      <div class="secondSection">
+        <hr />
+        <h1>We're Different</h1>
+        <div class="card">
+          <div class="snappy">
+            <img src="/images/icon-snappy-process.svg" alt="" />
+            <h2>Snappy Process</h2>
+            <p>
+              Our application process can be completed in minutes, not hours.
+              Don’t get stuck filling in tedious forms.
+            </p>
+          </div>
+          <div class="prices">
+            <img src="/images/icon-affordable-prices.svg" alt="" />
+            <h2>Affordable Prices</h2>
+            <p>
+              We don’t want you worrying about high monthly costs. Our prices
+              may be low, but we still offer the best coverage possible.
+            </p>
+          </div>
+          <div class="peopleFirst">
+            <img src="/images/icon-people-first.svg" alt="" />
+            <h2>People First</h2>
+            <p>
+              Our plans aren’t full of conditions and clauses to prevent
+              payouts. We make sure you’re covered when you need it.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="thirdSection">
+        <div class="thirdSection-card">
+          <h1>Find out more about how we work</h1>
+          <div><button>How we work</button></div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="footerNav">
+          <img src="/images/logo.svg" alt="Logo" class="logo" />
+          <div class="social-Icons">
+            <img src="/images/icon-facebook.svg" alt="" />
+            <img src="/images/icon-twitter.svg" alt="" />
+            <img src="/images/icon-pinterest.svg" alt="" />
+            <img src="/images/icon-instagram.svg" alt="" />
+          </div>
+        </div>
+        <hr />
+        <div class="footerCard">
+          <div class="company">
+            <h2>OUR COMPANY</h3>
+            <ul>
+              <li><a href="#">HOW WE WORK</a></li>
+              <li><a href="#">WHY INSURE?</a></li>
+              <li><a href="#">VIEW PLANS</a></li>
+              <li><a href="#">REVIEWS</a></li>
             </ul>
           </div>
-          <div class="firstSection">
-            <div class="firstLeft">
-              <hr />
-              <h1>Humanizing your insurance.</h1>
-              <p>
-                Get your life insurance coverage easier and faster. We blend our
-                expertise and technology to help you find the plan that’s right
-                for you. Ensure you and your loved ones are protected.
-              </p>
-              <button>VIEW PLANS</button>
-            </div>
-            <div class="firstRight">
-              <img src="/images/image-intro-desktop.jpg" alt="" />
-            </div>
+          <div class="help">
+            <h2>HELP ME</h2>
+            <ul>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">TERMS OF USE</a></li>
+              <li><a href="#">PRIVACY POLICY</a></li>
+              <li><a href="#">COOKIES</a></li>
+            </ul>
           </div>
-          <div class="secondSection">
-            <hr />
-            <h1>We're Different</h1>
-            <div class="card">
-              <div class="snappy">
-                <img src="/images/icon-snappy-process.svg" alt="" />
-                <h2>Snappy Process</h2>
-                <p>
-                  Our application process can be completed in minutes, not
-                  hours. Don’t get stuck filling in tedious forms.
-                </p>
-              </div>
-              <div class="prices">
-                <img src="/images/icon-affordable-prices.svg" alt="" />
-                <h2>Affordable Prices</h2>
-                <p>
-                  We don’t want you worrying about high monthly costs. Our
-                  prices may be low, but we still offer the best coverage
-                  possible.
-                </p>
-              </div>
-              <div class="peopleFirst">
-                <img src="/images/icon-people-first.svg" alt="" />
-                <h2>People First</h2>
-                <p>
-                  Our plans aren’t full of conditions and clauses to prevent
-                  payouts. We make sure you’re covered when you need it.
-                </p>
-              </div>
-            </div>
+          <div class="help">
+            <h2>CONTACT</h2>
+            <ul>
+              <li><a href="#">SALES</a></li>
+              <li><a href="#">SUPPORT</a></li>
+              <li><a href="#">LIVE CHAT</a></li>
+            </ul>
           </div>
-          <div class="thirdSection">
-            <div class="thirdSection-card">
-              <h1>Find out more about how we work</h1>
-              <div><button>How we work</button></div>
-            </div>
+          <div class="others">
+            <h2>OTHERS</h2>
+            <ul>
+              <li><a href="#">CAREERS</a></li>
+              <li><a href="#">PRESS</a></li>
+              <li><a href="#">LICENSES</a></li>
+            </ul>
           </div>
-          <div class="footer">
-            <div class="footerNav">
-              <img src="/images/logo.svg" alt="Logo" class="logo" />
-              <div class="social-Icons">
-                <img src="/images/icon-facebook.svg" alt="" />
-                <img src="/images/icon-twitter.svg" alt="" />
-                <img src="/images/icon-pinterest.svg" alt="" />
-                <img src="/images/icon-instagram.svg" alt="" />
-              </div>
-            </div>
-            <hr />
-            <div class="footerCard">
-              <div class="company">
-                <h3>OUR COMPANY</h3>
-                <ul>
-                  <li><a href="#">HOW WE WORK</a></li>
-                  <li><a href="#">WHY INSURE?</a></li>
-                  <li><a href="#">VIEW PLANS</a></li>
-                  <li><a href="#">REVIEWS</a></li>
-                </ul>
-              </div>
-              <div class="help">
-                <h3>HELP ME</h3>
-                <ul>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">TERMS OF USE</a></li>
-                  <li><a href="#">PRIVACY POLICY</a></li>
-                  <li><a href="#">COOKIES</a></li>
-                </ul>
-              </div>
-              <div class="help">
-                <h3>CONTACT</h3>
-                <ul>
-                  <li><a href="#">SALES</a></li>
-                  <li><a href="#">SUPPORT</a></li>
-                  <li><a href="#">LIVE CHAT</a></li>
-                </ul>
-              </div>
-              <div class="others">
-                <h3>OTHERS</h3>
-                <ul>
-                  <li><a href="#">CAREERS</a></li>
-                  <li><a href="#">PRESS</a></li>
-                  <li><a href="#">LICENSES</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="attribution">
-              Challenge by
-              <a
-                href="https://www.frontendmentor.io?ref=challenge"
-                target="_blank"
-                >Frontend Mentor</a
-              >. Coded by <a href="#">Oluwatobi David</a>
-            </div>
-          </div>
-        </main>
-      </body>
-    </html>
-  </head>
+        </div>
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Oluwatobi David</a>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
