--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <body>
     <main>
       <div class="nav">
-        <img src="/images/logo.svg" alt="Logo" class="logo" />
+        <img src="images/logo.svg" alt="Logo" class="logo" />
         <img
-          src="/images/icon-hamburger.svg"
+          src="images/icon-hamburger.svg"
           alt="hamburger"
           class="hamburg"
           onclick="menu()"
@@ -51,7 +51,7 @@
           <button>VIEW PLANS</button>
         </div>
         <div class="firstRight">
-          <img src="/images/image-intro-desktop.jpg" alt="" />
+          <img src="images/image-intro-desktop.jpg" alt="" />
         </div>
       </div>
       <div class="secondSection">
@@ -59,7 +59,7 @@
         <h1>We're Different</h1>
         <div class="card">
           <div class="snappy">
-            <img src="/images/icon-snappy-process.svg" alt="" />
+            <img src="images/icon-snappy-process.svg" alt="" />
             <h2>Snappy Process</h2>
             <p>
               Our application process can be completed in minutes, not hours.
@@ -67,7 +67,7 @@
             </p>
           </div>
           <div class="prices">
-            <img src="/images/icon-affordable-prices.svg" alt="" />
+            <img src="images/icon-affordable-prices.svg" alt="" />
             <h2>Affordable Prices</h2>
             <p>
               We don’t want you worrying about high monthly costs. Our prices
@@ -75,7 +75,7 @@
             </p>
           </div>
           <div class="peopleFirst">
-            <img src="/images/icon-people-first.svg" alt="" />
+            <img src="images/icon-people-first.svg" alt="" />
             <h2>People First</h2>
             <p>
               Our plans aren’t full of conditions and clauses to prevent
@@ -92,12 +92,12 @@
       </div>
       <div class="footer">
         <div class="footerNav">
-          <img src="/images/logo.svg" alt="Logo" class="logo" />
+          <img src="images/logo.svg" alt="Logo" class="logo" />
           <div class="social-Icons">
-            <img src="/images/icon-facebook.svg" alt="" />
-            <img src="/images/icon-twitter.svg" alt="" />
-            <img src="/images/icon-pinterest.svg" alt="" />
-            <img src="/images/icon-instagram.svg" alt="" />
+            <img src="images/icon-facebook.svg" alt="" />
+            <img src="images/icon-twitter.svg" alt="" />
+            <img src="images/icon-pinterest.svg" alt="" />
+            <img src="images/icon-instagram.svg" alt="" />
           </div>
         </div>
         <hr />
